<resources>
    <string name="app_name">FreeTube</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home</string>
    <string name="saved_fragment">Saved</string>
    <string name="category_all">All</string>
    <string name="category_comedy">Comedy</string>
    <string name="category_action">Action</string>
    <string name="category_drama">Drama</string>
    <string name="category_horror">Horror</string>
    <string name="category_scifi">Sci-Fi</string>
    <string name="category_romance">Romance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="category_explore">New</string>


    <string name="ayp_play_button">Play button</string>
    <string name="ayp_null_time">0:00</string>
    <string name="ayp_open_video_in_youtube">Open video in YouTube</string>
    <string name="ayp_full_screen_button">Full screen button</string>
    <string name="ayp_live">LIVE</string>
    <string name="ayp_custom_action_left">YouTube player Custom action left</string>
    <string name="ayp_custom_action_right">YouTube player custom action right</string>
    <string name="app_mail_address">patilranjit485@gmail.com</string>
</resources>